[package]
name = "rust-jwt-cracker"
version = "0.2.0"
authors = ["Damien Szczyt <dszczyt@work4labs.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
overflow-checks = true
lto = true

[dependencies]
base64-url = "1"
clap = { version = "3", features = ["derive"] }
hmac = "0.12"
sha2 = "0.10"
tokio = { version = "1.20", features = ["full"] }
